<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog"
    android:orientation="vertical"
    android:padding="@dimen/_14sdp"
    android:layout_marginHorizontal="@dimen/_30sdp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/text"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/roboto_500"
        android:textStyle="bold"
        android:text="@string/are_you_sure_to_delete_this_item" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/_6sdp"
            android:layout_weight="1"
            android:background="@color/text"
            android:text="@string/delete"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_weight="1"
            android:background="@drawable/background_text_box"
            android:text="@string/Cancel"
            android:gravity="center"
            android:textColor="@color/text"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
