<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="a"
            type="nix.cake.android.ui.main.product.filter.FilterProductActivity" />
        <variable
            name="vm"
            type="nix.cake.android.ui.main.product.filter.FilterProductViewModel" />
        <import type="android.view.View"/>
    </data>
    <FrameLayout
        android:id="@+id/l_my_order"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.profile.order.MyOrdersActivity">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg">
            <RelativeLayout
                android:id="@+id/l_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginBottom="@dimen/_12sdp">
                <ImageView
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:src="@drawable/back"
                    android:padding="@dimen/_10sdp"
                    android:onClick="@{(v)->a.finish()}"
                    android:layout_centerVertical="true"
                    android:layout_marginVertical="@dimen/_10ssp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/edit_address"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    android:textColor="@color/text"
                    android:fontFamily="@font/roboto_500"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/l_header"
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/_12sdp">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:background="@drawable/background_text_box_radius_4"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/text"
                    android:hint="@string/name"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:fontFamily="@font/roboto_500"
                    />
                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:background="@drawable/background_text_box_radius_4"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/text"
                    android:hint="@string/address_detail"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:fontFamily="@font/roboto_500"
                    />
                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:background="@drawable/background_text_box_radius_4"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/text"
                    android:hint="@string/phone"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:fontFamily="@font/roboto_500"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:text="@string/save_address"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:fontFamily="@font/roboto_500"
                    android:background="@drawable/background_button_login_radius_25"
                    android:layout_marginVertical="@dimen/_40sdp"/>
            </LinearLayout>

        </RelativeLayout>
    </FrameLayout>
</layout>