<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="a"
            type="nix.cake.android.ui.main.cart.order.OrderSuccessActivity"/>
        <variable
            name="vm"
            type="nix.cake.android.ui.main.cart.order.OrderSuccessViewModel"/>
        <import type="android.view.View"/>
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="hideKeyboard"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/success"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mgs_order_success_2"
                android:textColor="@color/text"
                android:textSize="@dimen/_24ssp"
                android:textStyle="bold"
                android:fontFamily="@font/roboto_500"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_6sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mgs_order_success"
                android:textColor="@color/text"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/roboto_500"
                android:gravity="center"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:text="@string/go_to_shop_now"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_500"
            android:textSize="@dimen/_14ssp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:background="@color/text"
            android:layout_margin="@dimen/_56sdp"
            android:layout_alignParentBottom="true"
            android:onClick="@{v -> a.goToShopNow()}"/>

    </RelativeLayout>
</layout>